# rateshift

./: CMakeLists.txt  README.md  buildBin.sh
example/: Analysis.R  README.md  nd5-PhyML_tree.dnd  nd5.aln.mase  rateshift.bpp
rateshift/: CMakeLists.txt  RateShift.cpp
